# ccaffeine

./: .cvsignore  A.GETTING.STARTED.html  Changelog.01.07.2005  Changelog.01.17.2005  Changelog.01.31.2005  Changelog.04.25.2004  Changelog.05.10.2004  Changelog.06.10.2004  Changelog.07.07.2004  Changelog.08.01.2004  Changelog.10.11.2008  Changelog.10.14.2004  Changelog.12.18.03  Changelog.12.8.2004  Changelog.2.7.2005  Changelog.8.12.2004  DEVELOPER  MakeIncl.CCAFE_Siloon.in  Makefile-tar  Makefile.conf.dl.in  Makefile.conf.in  Makefile.dl.in  Makefile.in  Makefile.install.in  Makefile.pthreads.in  Proposal.Makefiles  README.DOC  README.Makefile.conf  README.XML  README.babel_0_9_2.txt  README.babel_0_9_4.txt  README.dccafe  README.mpi  README.namespace  README_Babel.txt  TODO-list  TODO.OoB.semaphore.Pippin  acsite.m4  configure  configure.aix  (+8 more)
chez-baallan/: app.cpp  esitest  nports.h  simplify-bld  simplify-bld.tcl  simplify-cl  simplify-cl.tcl  stencil.bld  stencil.cl  stencil2.bld  stencil2.cl  testSimple.bld  testbig1.bld  testbig1Simple.bld  testbig2Simple.bld  testbig3Simple.bld  testbig3Simple.cl  tut-do
chez-craig/: .cvsignore  MODULE  Makefile  VectorStringList.cc  VectorStringList.h  prototypes.doinclude  siloon_casts.cc  siloon_casts.h  siloon_execute.cc  siloon_execute.h  siloon_includes.h  siloon_register.cc  testBS.py  user.defs
chez-craig/include/: Buffer.h  Complex.h  Pointer.h  Prototype.h  Type.h  pdb.h  pdb.inl  pdbFile.h  pdbFile.inl  pdbItem.h  pdbSimpleItem.h  pdbSimpleItem.inl  siloon.h  siloon_types.h
chez-craig/python/: .cvsignore  Makefile  cca.py  siloon_cca.py  siloon_python.cc
chez-craig/src/: Buffer.cc  Makefile  Pointer.cc  Prototype.cc  Type.cc  siloon.cc
chez-rob/ArbTypeHolder/: ArbTypeBlock.cxx.sed  ArbTypeBlock.h.sed  ArbTypeHolder.cxx.sed  ArbTypeHolder.h.sed
chez-rob/BSTest/: BuilderServiceTest.h  BuilderSvc.i  CCAException.h  DefaultBuilderService.cxx  DefaultBuilderService.h  DefaultComponentID.cxx  DefaultComponentID.h  Makefile
chez-rob/ColorHolder/: BasicShape.h  Color.h  ColorHolder.cca.in  ColorHolder_wrapper.cxx  ColorHolder_wrapper.h  MakeIncl.COLHLDR_Component.in  Makefile.in  configure  configure.in
chez-rob/boost-test/: Makefile  hg.cc  string.cc  vector.cc
chez-rob/dataholder/: .cvsignore  DHLDRConfig.sh.in  DHLDRConfigTemporary.sh.in  DH_Test.cxx  DataHolder.cca.in  DataHolder.cxx  DataHolder.h  DataHolder_wrapper.cxx  DataHolder_wrapper.h  MakeIncl.DHLDR_Component.in  Makefile.in  Shape.h  configure  configure.in
chez-rob/io/: BufferedReader.cxx  BufferedReader.h  Makefile  NonblockingReader.cxx  NonblockingReader.h  Reader.h  driver.cxx  testBufferedReader.cxx  testNonblockingReader.cxx  testReader.cxx
chez-rob/protoBS/: .cvsignore  AbstractFramework.h  AbstractFramework.i  BuilderService.h  BuilderService_ListImpl.h  BuilderSvc.i  CCAException.h  CaffeineAbstractFramework.i  CcafeBuilderService.h  CcafeCCAException.cxx  CcafeCCAException.h  CcafeConnection.h  CcaffeineAbstractFramework.cxx  CcaffeineAbstractFramework.cxx.in  CcaffeineAbstractFramework.h  CcaffeineBuilderService.cxx  CcaffeineBuilderService.h  ComponentID.i  ComponentProxy.cxx  ComponentProxy.h  DefaultBuilderService.cxx  DefaultComponentID.cxx  DefaultComponentID.h  DefaultComponentID.i  DefaultStringList.cxx  DefaultStringList.h  JavaTest.java  Makefile.in  StringList.h  StringList.i  TODO  cca.i  ccaFrameworkServices.h  testAbstractFwk.cxx  testBuilderService.cxx
chez-rob/sidl/: sourceMe.bash
chez-rob/testSwig/: Makefile  RunTst.java  RunTst.py  RunTst.rb  tst.c  tst.i
config/: .cvsignore  Makefile  cca_bundle_tag.m4  cca_spec_neo_config.m4  ccafe_babel_obsolete.m4  ccafe_babellibtool.m4  ccafe_bash.m4  ccafe_catamount.m4  ccafe_cca_obsolete.m4  ccafe_ccafe_config.m4  ccafe_check_mpi.m4  ccafe_dev.m4  ccafe_docs.m4  ccafe_doxygen.m4  ccafe_find_shells.m4  ccafe_gnu_cp.m4  ccafe_lib_readline.m4  ccafe_libtoolmake.m4  ccafe_mpi_overrides.m4  ccafe_namespace_end.m4  ccafe_notype.m4  ccafe_pushd.m4  ccafe_pushd.sh  ccafe_shlib_suffix.m4  ccafe_socket.m4  ccafe_tools.m4  ccafe_xml2.m4  cpparents.sh  ldAix  ldAixCPP  mpi.folklore  mpich_cruft.m4  mpihome.guess  neo_check_mpi.m4  old_check_mpi.m4  shlib.m4
cxx/: .cvsignore  MakeIncl.CCAFE_Component.in  MakeIncl.CCAFE_MPI.in  Makefile.Rules.in  Makefile.Static.in  Makefile.Vars.in  Makefile.in  README
cxx/cmd/: .cvsignore  Cmd.h  CmdAction.h  CmdActionExit.cxx  CmdActionExit.h  CmdActionHelp.cxx  CmdActionHelp.h  CmdContext.cxx  CmdContext.h  CmdParse.cxx  CmdParse.h  Makefile.in  README
examples/: .cvsignore  README.txt  configureHints.in
examples/babel-1.0-static/: .cvsignore  Makefile.in  TestScriptBabel.sidl  configure  configure.ac  test-input.scr.in
examples/babel-1.0-static/config/: cca_comp_flags.m4  ccafe_ccafe_config.m4
examples/babel-1.0-static/src/: Makefile.in  TestScriptBabel_BabelMain_Impl.cxx  TestScriptBabel_BabelMain_Impl.hxx  TestScriptBabel_ComponentClassDescription_Impl.cxx  TestScriptBabel_ComponentClassDescription_Impl.hxx  TestScriptBabel_Exception_Impl.cxx  TestScriptBabel_Exception_Impl.hxx  TestScriptBabel_PrivateRepository_Impl.cxx  TestScriptBabel_PrivateRepository_Impl.hxx  TestScriptBabel_StringMap_Impl.cxx  TestScriptBabel_StringMap_Impl.hxx  driver.cc
javadoc/: .cvsignore  Makefile  README.DOC
lib/: Makefile  RETIRED
scripts/: .cvsignore  bld2fake  bld2fake.tcl  bld2rc.in  bld2rc.tcl  ccamacro2ccans  ccans2ccaubar  ccaubar2ccans  classic2neo  classic2neob  classic2neoc  genlibheader  makeJInstallList  pspi2sp  simplify-bld.in  simplify-bld.tcl  tojcpn
src/: .cvsignore  DoxyConfig.in  EmptyRC  MakeIncl.CCAFE.in  Makefile  bkupFile.rb.in  ccafe-config.in  ccafeConfig.sh.in  libccafeCore.scl.in  memtest.in  namespchgr.rb.in  setupMPD  simpleBatch.in  simpleTests.in  test-GoThread.in  test-python-bs.in  testBabelFactoryService.in  testBabelParameterDialogServiceTest.in  testBabelParameterPortFactory.in  testBabelPortTranslator.in  testBabelServiceRegistry.in  testGoPortsRC  testRPMBatch.in  testRPMPortTranslator.in  uniquifyLibtool.sh.in
(+1243 files in other folders)
